URLClassLoader.java (JarURLLoader.JarURLLoader): Don't look aside for "GCJLIBS" in directory where jarfiles are loaded.
       * java/net/URLClassLoader.java (JarURLLoader.JarURLLoader): Don't look
       aside for "GCJLIBS" in directory where jarfiles are loaded.
       (JarURLLoader.getClass): Removed method.
       (JarURLLoader.toString): Removed method.
       (FileResource.toString): Removed method.

From-SVN: r95076