@@ -306,8 +306,6 @@ public class URLClassLoader extends SecureClassLoader
 
     Vector classPath;	// The "Class-Path" attribute of this Jar's manifest
 
-    SoURLLoader soURLLoader;
-
     public JarURLLoader(URLClassLoader classloader, URL baseURL)
     {
       super(classloader, baseURL);
@@ -320,70 +318,48 @@ public class URLClassLoader extends SecureClassLoader
       sb.append("!/");
       String jarURL = sb.toString();
 
-      this.soURLLoader = null;
       this.classPath = null;
       URL baseJarURL = null;
       JarFile jarfile = null;
       try
 	{
-	  baseJarURL
-	    = new URL(null, jarURL, classloader.getURLStreamHandler("jar"));
-	  jarfile
-	    = ((JarURLConnection) baseJarURL.openConnection()).getJarFile();
-
-	  if (jarfile != null)
+	  baseJarURL =
+	    new URL(null, jarURL, classloader.getURLStreamHandler("jar"));
+	  
+	  jarfile =
+	    ((JarURLConnection) baseJarURL.openConnection()).getJarFile();
+	  
+	  Manifest manifest;
+	  Attributes attributes;
+	  String classPathString;
+	  
+	  if ((manifest = jarfile.getManifest()) != null
+	      && (attributes = manifest.getMainAttributes()) != null
+	      && ((classPathString 
+		   = attributes.getValue(Attributes.Name.CLASS_PATH)) 
+		  != null))
 	    {
-	      String fileName = baseURL.getFile();
-	      if (fileName != null)
-		{
-		  File f = new File(fileName);
-		  String libDirName = f.getCanonicalFile().getParent()
-		    + File.separator + "GCJLIBS";
-		  File libDir = new File(libDirName);
-		  if (libDir != null && (libDir.isDirectory()))
+	      this.classPath = new Vector();
+	      
+	      StringTokenizer st
+		= new StringTokenizer 
+		(classPathString,
+		 System.getProperty ("path.separator", ":"));
+	      
+	      while (st.hasMoreElements ()) 
+		{  
+		  String e = st.nextToken ();
+		  try
 		    {
-		      File soFile = new File (libDirName 
-					      + File.separator + f.getName() 
-					      + ".so");
-		      if (soFile != null && soFile.isFile())
-			this.soURLLoader
-			  = new SoURLLoader (classloader, soFile.toURL(),
-					     baseURL);
+		      URL url = new URL(baseURL, e);
+		      this.classPath.add(url);
+		    } 
+		  catch (java.net.MalformedURLException xx)
+		    {
+		      // Give up
 		    }
 		}
-
-	      Manifest manifest;
-	      Attributes attributes;
-	      String classPathString;
-
-	      if ((manifest = jarfile.getManifest()) != null
-		  && (attributes = manifest.getMainAttributes()) != null
-		  && ((classPathString 
-		       = attributes.getValue(Attributes.Name.CLASS_PATH)) 
-		      != null))
-		{
-		  this.classPath = new Vector();
-
-		  StringTokenizer st
-		    = new StringTokenizer 
-		      (classPathString,
-		       System.getProperty ("path.separator", ":"));
-      
-		  while (st.hasMoreElements ()) 
-		    {  
-		      String e = st.nextToken ();
-		      try
-			{
-			  URL url = new URL(baseURL, e);
-			  this.classPath.add(url);
-			} 
-		      catch (java.net.MalformedURLException xx)
-			{
-			  // Give up
-			}
-		    }
-		}
- 	    }
+	    }
 	}
       catch (IOException ioe)
         {
@@ -392,13 +368,6 @@ public class URLClassLoader extends SecureClassLoader
 
       this.baseJarURL = baseJarURL;
       this.jarfile = jarfile;
-    }
-
-    Class getClass(String className)
-    {
-      if (soURLLoader != null)
-	return soURLLoader.getClass(className);
-      return null;
     }
 
     /** get resource with the name "name" in the jar url */
@@ -415,11 +384,6 @@ public class URLClassLoader extends SecureClassLoader
         return new JarURLResource(this, name, je);
       else
         return null;
-    }
-
-    public String toString ()
-    {
-	return "jarfile " + jarfile.getName();
     }
 
     Manifest getManifest()
@@ -670,11 +634,6 @@ public class URLClassLoader extends SecureClassLoader
     public int getLength()
     {
       return (int) file.length();
-    }
-
-    public String toString ()
-    {
-	return "file " +file.getAbsolutePath();
     }
 
     public URL getURL()
